# rust-chat

./: .gitignore  Cargo.toml  README.md  bootstrap.js  package-lock.json  package.json  style.scss  webpack.config.js
src/: app.rs
static/: index.html
